tests/good/core018.lat
/* test input */

int main() {
  int x = readInt();
  string y = readString();
  string z = readString();

  printInt(x-5);
  printString(y+z);  
  return 0 ;
}