tests/bad/bad027.lat
// Assigning int to string variable.

int main () {
 string x;
 x = 1;
 return 0 ;
}